# game

./: CMakeLists.txt  LICENSE  Makefile  Makefile.good  main.cpp
include/: Rectangle.h  Rectangle.hpp  SDLState.h  Table.hpp  Vec2.h  Vec2.hpp  aabb.hpp  atlas.hpp  body.hpp  file_util.hpp  image.hpp  opengl_util.hpp  quads.hpp  sdlwrapper.h  sdlwrapper.hpp  texturedquad.hpp  world.h
shaders/: fragment.glsl  vertex.glsl
src/: Rectangle.cpp  SDLState.cpp  Table.cpp  atlas.cpp  file_util.cpp  image.cpp  main.cpp  opengl_util.cpp  quads.cpp  sdlwrapper.cpp
